DigicielFull/force-app/main/default/objects/gnx__Recipient__c/gnx__Recipient__c.object-meta.xml
<CustomObject>
    <label>Recipient</label>
    <nameField>
        <displayFormat>D-{000}</displayFormat>
        <label>Numéro de destinataire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>