DigicielFull/force-app/main/default/objects/gnx__Recipient__c/fields/gnx__Contact__c.field-meta.xml
<CustomField>
    <fullName>gnx__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>