DigicielFull/force-app/main/default/objects/gnx__Recipient__c/fields/gnx__Recipient_link__c.field-meta.xml
<CustomField>
    <fullName>gnx__Recipient_link__c</fullName>
    <label>Recipient link</label>
    <length>32072</length>
    <type>LongTextArea</type>
</CustomField>