DigicielFull/force-app/main/default/objects/gnx__Recipient__c/fields/gnx__Recipient_status__c.field-meta.xml
<CustomField>
    <fullName>gnx__Recipient_status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>notified</fullName>
            </value>
            <value>
                <fullName>signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>